# split

backend/: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  mypy.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 1fd0866197ba_add_item_model_and_relationship_with_.py  31c548474239_change_raw_text_default_value_and_.py  5a9c887fa87f_add_consumption_model_and_pertinent_.py  623f2f319445_move_debug_data_to_its_own_object.py  76d268e7d2b0_add_item_generation_attributes_to_bills.py  8232ee26188f_add_bill_model.py  9b27e2ae0cbd_add_positions_to_items_to_order_them.py  cbd75000d2ff_add_participant_model_and_relationship_.py
backend/split/: config.py  database.py  deps.py  errors.py  main.py
backend/split/crud/: bills.py  consumption.py  item_generations.py  items.py  participants.py
backend/split/endpoints/: __init__.py  bills.py  consumption.py  items.py  participants.py  shared.py
backend/split/endpoints/admin/: __init__.py  bills.py
backend/split/models/: __init__.py  bill.py  consumption.py  item.py  item_generation.py  participant.py
backend/split/schemas/: bill.py  consumption.py  item.py  participant.py
backend/split/schemas/admin/: bill.py  item_generation.py
backend/split/services/: receipt_scanner.py
backend/split/services/receipt_parser/: __init__.py  cleaner.py  core.py  parser.py  regular_expressions.py  utils.py
backend/split/shared/: models.py  schemas.py
backend/split/tasks/: bills.py
backend/split/utils/: regular_expressions.py
(+65 files in other folders)
