[tool.poetry]
name = "split"
version = "0.1.0"
description = "Backend API for split"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"
packages = [
    { include = "split" },
]
exclude = [
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    "Makefile",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.4"
mypy = "^0.982"
